[package]
name = "advent_of_code_2023"
version = "0.1.0"
authors = ["Jonathan VanderMey <jonathan@vandermey.ca>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.3"
aoc-runner-derive = "0.3"
grid_2d = "0.15"
nom = "7.1"
num = "0.4"
range-ext = "0.3"
